# url-shortener

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
static/: index.js
templates/: 404.html  index.html
url_shortener/: cache.py  conf.py  scheduler.py  schema.py  utils.py
url_shortener/database/: __init__.py  connection.py  models.py
