[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Deni <azureswastika@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
SQLAlchemy = "^1.4.45"
aiomysql = "^0.1.1"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
redis = "^4.4.0"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
